# curator

./: .air.toml  .gitignore  Procfile  README.md  Taskfile.yml  docker-compose-dev.yml  docker-compose-override.yml  docker-compose.yml  go.mod  go.sum  tsconfig.json
app/backend/: .air.toml  .dockerignore  Dockerfile  go.mod  go.sum  main.go  main.py  pyproject.toml  requirements.txt  v1.py
app/backend/cmd/api/: main.go  server.go
app/backend/config/: config.go  logging.go
app/backend/internal/: server.go
app/backend/internal/config/: config.go
app/backend/internal/handler/: route.go
app/backend/internal/middleware/: logging.go
app/backend/internal/routes/: route.go
app/backend/internal/services/: parser.go  upload.go  youtube.go
app/backend/internal/utils/: config.go  logger.go  parser.go  rank.go  utils.go
app/backend/middleware/: logging.go
app/frontend/: .dockerignore  .prettierrc  Dockerfile  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
app/frontend/.husky/: pre-commit
app/frontend/src/: App.css  App.d.ts  App.js  App.tsx  Root.tsx  index.css  main.js  main.tsx
app/frontend/src/components/: Dropzone.d.ts  Dropzone.js  Dropzone.tsx  FileCard.tsx  Footer.js  Footer.tsx  GoogleSearchCard.tsx  Layout.d.ts  Layout.js  Layout.tsx  Navbar.js  Navbar.tsx  ResultCard.d.ts  ResultCard.js  ResultCard.tsx  StatusIndicator.tsx
app/frontend/src/components/pages/: Home.tsx  Landing.js  Landing.tsx  Result.js  Result.tsx
app/frontend/src/components/ui/: Button.tsx  Disclaimer.tsx  Github.d.ts  Github.js  Github.tsx  GoogleColored.tsx  StatusIndicator.d.ts  StatusIndicator.js  StatusIndicator.tsx  X.d.ts  X.js  X.tsx  button.d.ts  button.js
app/frontend/src/lib/: fetch.ts  queries.js  queries.ts  utils.ts
app/frontend/src/pages/: Home.tsx  Landing.tsx
app/python-service/: Dockerfile  main.py  requirements.txt  v1.py
cmd/api/: main.go
