[project]
name = "curator-backend"
version = "0.1.0"
description = "Backend service for Curator project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Enoch Fagbenja", email = "fagbenjaenoch73@gmail.com" },
]

dependencies = [
  "fastapi",
  "keybert",
  "langchain-huggingface",
  "python-dotenv",
  "PyMuPDF",
  "redis",
  "slowapi",
  "uvicorn[standard]"
]

[build-system]
requires = ["setuptools==68.0.0", "wheel==0.40.0"]
build-backend = "setuptools.build_meta"

[tool.deptry]
ignore = ["DEP002"]

[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn"]