[project]
name = "curator-backend"
version = "0.1.0"
description = "Backend service for Curator project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Enoch Fagbenja", email = "fagbenjaenoch73@gmail.com" },
]

dependencies = [
  "fastapi",
  "keybert",
  "langchain-classic",
  "langchain_core",
  "langchain_community",
  "langchain-huggingface",
  "python-dotenv",
  "python-multipart",
  "PyMuPDF",
  "redis",
  "slowapi",
  "torch==2.8.0+cpu",
  "torchvision==0.23.0+cpu",
  "uvicorn[standard]"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]


[tool.deptry]
ignore = ["DEP002"]

[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn"]
